Add image for user
